[package]
name = "isoduration"
version = "0.0.0"
authors = ["Alastair Feille <me@alastair.se>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A library to represent and parse ISO 8601 durations"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1"
regex = "1"
